# Spenzo

./: .env.example  .gitignore  Dockerfile  FEATURES.md  LICENSE  README.md  bot.py  build_binary.sh  main.py  pyproject.toml  sse_relay.py
website/: index.html  package-lock.json  package.json
website/src/: index.css
website/src/pages/: Analytics.jsx  Home.jsx
