[project]
name = "spenzo"
version = "0.1.0"
description = "An expense tracking tool designed for seamless integration with AI assistants via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.135.1",
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "supabase>=2.28.3",
    "requests>=2.32.0",
    "twilio>=9.10.3",
    "uvicorn>=0.42.0",
]
